--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
   <properties>
     <versionString>10.0</versionString>
     <xccVersion>${versionString}</xccVersion>
-    <hadoopVersion>3.3.4</hadoopVersion>
-    <jacksonVersion>2.14.0-rc3</jacksonVersion>
+    <hadoopVersion>3.3.6</hadoopVersion>
+    <jacksonVersion>2.15.2</jacksonVersion>
     <commonsCsvVersion>1.5.2-marklogic</commonsCsvVersion>
     <bundleArtifact>apache</bundleArtifact>
 
@@ -479,7 +479,7 @@
         <dependency>
           <groupId>com.thoughtworks.xstream</groupId>
           <artifactId>xstream</artifactId>
-          <version>1.4.19</version>
+          <version>1.4.20</version>
         </dependency>
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -549,7 +549,7 @@
         <dependency>
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
-          <version>31.1-jre</version>
+          <version>32.1.2-jre</version>
         </dependency>
         <dependency>
           <groupId>com.google.guava</groupId>
@@ -725,7 +725,7 @@
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
-      <version>1.4.19</version>
+      <version>1.4.20</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -820,7 +820,7 @@
     <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
-      <version>31.1-jre</version>
+      <version>32.1.2-jre</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
