--- a/pom.xml
+++ b/pom.xml
@@ -590,6 +590,11 @@
           <artifactId>commons-cli</artifactId>
           <version>1.6.0</version>
         </dependency>
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.26.0</version>
+        </dependency>
       <!-- System dependencies-->
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -754,7 +759,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
-      <version>1.21</version>
+      <version>1.26.0</version>
     </dependency>
     <dependency>
       <groupId>com.sun.jersey</groupId>
